Opened 12 years ago
Closed 12 years ago
#3949 closed defect (fixed)
utvideo enc yuv420p: broken output with some resolutions
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | utvideo regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
C:\>ffmpeg -i 680.jpg -vcodec utvideo -pix_fmt yuv420p out.avi
ffmpeg version N-66249-gbcac0f4 Copyright (c) 2000-2014 the FFmpeg developers
built on Sep 13 2014 02:08:41 with gcc 4.8.3 (GCC)
configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --
enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-lib
modplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrw
b --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinge
r --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --en
able-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis
--enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-
libx265 --enable-libxavs --enable-libxvid --enable-decklink --enable-zlib
libavutil 54. 7.100 / 54. 7.100
libavcodec 56. 1.100 / 56. 1.100
libavformat 56. 4.101 / 56. 4.101
libavdevice 56. 0.100 / 56. 0.100
libavfilter 5. 1.100 / 5. 1.100
libswscale 3. 0.100 / 3. 0.100
libswresample 1. 1.100 / 1. 1.100
libpostproc 53. 0.100 / 53. 0.100
Input #0, image2, from '680.jpg':
Duration: 00:00:00.04, start: 0.000000, bitrate: 26517 kb/s
Stream #0:0: Video: mjpeg, yuvj420p(pc, bt470bg), 680x814 [SAR 144:144 DAR 3
40:407], 25 tbr, 25 tbn, 25 tbc
[swscaler @ 02ef7000] deprecated pixel format used, make sure you did set range
correctly
Output #0, avi, to 'out.avi':
Metadata:
ISFT : Lavf56.4.101
Stream #0:0: Video: utvideo (ULY0 / 0x30594C55), yuv420p, 680x814 [SAR 1:1 D
AR 340:407], q=2-31, 200 kb/s, 25 fps, 25 tbn, 25 tbc
Metadata:
encoder : Lavc56.1.100 utvideo
Stream mapping:
Stream #0:0 -> #0:0 (mjpeg (native) -> utvideo (native))
Press [q] to stop, [?] for help
frame= 1 fps=0.0 q=0.0 Lsize= 425kB time=00:00:00.04 bitrate=87045.2kbits
/s
video:419kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing o
verhead: 1.350168%
C:\>ffmpeg -i out.avi out2.avi
ffmpeg version N-66249-gbcac0f4 Copyright (c) 2000-2014 the FFmpeg developers
built on Sep 13 2014 02:08:41 with gcc 4.8.3 (GCC)
configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --
enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-lib
modplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrw
b --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinge
r --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --en
able-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis
--enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-
libx265 --enable-libxavs --enable-libxvid --enable-decklink --enable-zlib
libavutil 54. 7.100 / 54. 7.100
libavcodec 56. 1.100 / 56. 1.100
libavformat 56. 4.101 / 56. 4.101
libavdevice 56. 0.100 / 56. 0.100
libavfilter 5. 1.100 / 5. 1.100
libswscale 3. 0.100 / 3. 0.100
libswresample 1. 1.100 / 1. 1.100
libpostproc 53. 0.100 / 53. 0.100
Input #0, avi, from 'out.avi':
Metadata:
encoder : Lavf56.4.101
Duration: 00:00:00.04, start: 0.000000, bitrate: 87045 kb/s
Stream #0:0: Video: utvideo (ULY0 / 0x30594C55), yuv420p(bt470bg), 680x814,
SAR 1:1 DAR 340:407, 25 fps, 25 tbr, 25 tbn, 25 tbc
Output #0, avi, to 'out2.avi':
Metadata:
ISFT : Lavf56.4.101
Stream #0:0: Video: mpeg4 (FMP4 / 0x34504D46), yuv420p, 680x814 [SAR 1:1 DAR
340:407], q=2-31, 200 kb/s, 25 fps, 25 tbn, 25 tbc
Metadata:
encoder : Lavc56.1.100 mpeg4
Stream mapping:
Stream #0:0 -> #0:0 (utvideo (native) -> mpeg4 (native))
Press [q] to stop, [?] for help
[utvideo @ 02f07bc0] 3710 bits left after decoding slice
[utvideo @ 02f07bc0] Slice decoding ran out of bits
frame= 0 fps=0.0 q=0.0 Lsize= 6kB time=00:00:00.00 bitrate=N/A
video:0kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing ove
rhead: unknown
Output file is empty, nothing was encoded (check -ss / -t / -frames parameters i
f used)
Attachments (1)
Change History (4)
by , 12 years ago
comment:1 by , 12 years ago
| Summary: | utvideo enc 420p: broken output with some resolutions → utvideo enc yuv420p: broken output with some resolutions |
|---|
comment:2 by , 12 years ago
| Component: | undetermined → avcodec |
|---|---|
| Keywords: | utvideo regression added |
| Priority: | normal → important |
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:3 by , 12 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Fixed by Christophe Gisquet in cb530dda7d76790b08ee3b7f67e251f3ce48c359
Note:
See TracTickets
for help on using tickets.



Regression since efec857c